Refactor. TODO: finish view management, and redo the slayer view components with it.