@@ -1,5 +1,6 @@
 package io.hurx.models;
 
+import java.util.Arrays;
 import java.util.List;
 
 public enum CombatStyle {
@@ -20,28 +21,28 @@ public enum CombatStyle {
     BlackChinsShort("Black. chins (short)", IconPaths.CombatStyleBlackChinsShort),
     BlackChinsMedium("Black. chins (medium)", IconPaths.CombatStyleBlackChinsMedium),
     BlackChinsLong("Black. chins (long)", IconPaths.CombatStyleBlackChinsLong),
-    Magic("Magic", IconPaths.CombatStyleMagic),
-    IceBurst("Ice burst", IconPaths.CombatStyleIceBurst),
-    IceBurstDefensive("Ice burst (defensive)", IconPaths.CombatStyleIceBurstDefensive),
-    BloodBurst("Blood burst", IconPaths.CombatStyleBloodBurst),
-    BloodBurstDefensive("Blood burst (defensive)", IconPaths.CombatStyleBloodBurstDefensive),
-    SmokeBurst("Smoke burst", IconPaths.CombatStyleSmokeBurst),
-    SmokeBurstDefensive("Smoke burst (defensive)", IconPaths.CombatStyleSmokeBurstDefensive),
-    ShadowBurst("Shadow burst", IconPaths.CombatStyleShadowBurst),
-    ShadowBurstDefensive("Shadow burst (defensive)", IconPaths.CombatStyleShadowBurstDefensive),
-    IceBarrage("Ice barrage", IconPaths.CombatStyleIceBarrage),
-    IceBarrageDefensive("Ice barrage (defensive)", IconPaths.CombatStyleIceBarrageDefensive),
-    BloodBarrage("Blood barrage", IconPaths.CombatStyleBloodBarrage),
-    BloodBarrageDefensive("Blood barrage (defensive)", IconPaths.CombatStyleBloodBarrageDefensive),
-    SmokeBarrage("Smoke barrage", IconPaths.CombatStyleSmokeBarrage),
-    SmokeBarrageDefensive("Smoke barrage (defensive)", IconPaths.CombatStyleSmokeBarrageDefensive),
-    ShadowBarrage("Shadow barrage", IconPaths.CombatStyleShadowBarrage),
-    ShadowBarrageDefensive("Shadow barrage (defensive)", IconPaths.CombatStyleShadowBarrageDefensive);
+    Magic("Magic", IconPaths.CombatStyleMagic, 40),
+    IceBurst("Ice burst", IconPaths.CombatStyleIceBurst, 40),
+    IceBurstDefensive("Ice burst (defensive)", IconPaths.CombatStyleIceBurstDefensive, 40),
+    BloodBurst("Blood burst", IconPaths.CombatStyleBloodBurst, 39),
+    BloodBurstDefensive("Blood burst (defensive)", IconPaths.CombatStyleBloodBurstDefensive, 39),
+    SmokeBurst("Smoke burst", IconPaths.CombatStyleSmokeBurst, 36),
+    SmokeBurstDefensive("Smoke burst (defensive)", IconPaths.CombatStyleSmokeBurstDefensive, 36),
+    ShadowBurst("Shadow burst", IconPaths.CombatStyleShadowBurst, 37),
+    ShadowBurstDefensive("Shadow burst (defensive)", IconPaths.CombatStyleShadowBurstDefensive, 37),
+    IceBarrage("Ice barrage", IconPaths.CombatStyleIceBarrage, 52),
+    IceBarrageDefensive("Ice barrage (defensive)", IconPaths.CombatStyleIceBarrageDefensive, 52),
+    BloodBarrage("Blood barrage", IconPaths.CombatStyleBloodBarrage, 51),
+    BloodBarrageDefensive("Blood barrage (defensive)", IconPaths.CombatStyleBloodBarrageDefensive, 51),
+    SmokeBarrage("Smoke barrage", IconPaths.CombatStyleSmokeBarrage, 48),
+    SmokeBarrageDefensive("Smoke barrage (defensive)", IconPaths.CombatStyleSmokeBarrageDefensive, 48),
+    ShadowBarrage("Shadow barrage", IconPaths.CombatStyleShadowBarrage, 48),
+    ShadowBarrageDefensive("Shadow barrage (defensive)", IconPaths.CombatStyleShadowBarrageDefensive, 48);
 
     public static List<CombatStyle> getMeleeStyles() {
         return melee;
     }
-    private static List<CombatStyle> melee = List.of(new CombatStyle[] {
+    private static List<CombatStyle> melee = Arrays.asList(new CombatStyle[] {
         CombatStyle.Controlled,
         CombatStyle.Attack,
         CombatStyle.Strength,
@@ -49,10 +50,19 @@ public enum CombatStyle {
         CombatStyle.DefenceLast
     });
 
+    public static List<CombatStyle> getDefensiveRanged() {
+        return defensiveRanged;
+    }
+    private static List<CombatStyle> defensiveRanged = Arrays.asList(new CombatStyle[] {
+        CombatStyle.RegChinsLong,
+        CombatStyle.RedChinsLong,
+        CombatStyle.BlackChinsLong,
+    });
+
     public static List<CombatStyle> getRangedStyles() {
         return ranged;
     }
-    private static List<CombatStyle> ranged = List.of(new CombatStyle[] {
+    private static List<CombatStyle> ranged = Arrays.asList(new CombatStyle[] {
         CombatStyle.Ranged,
         CombatStyle.RangedDefensive,
         CombatStyle.RegChinsShort,
@@ -69,7 +79,7 @@ public enum CombatStyle {
     public static List<CombatStyle> getMagicStyles() {
         return magic;
     }
-    private static List<CombatStyle> magic = List.of(new CombatStyle[] {
+    private static List<CombatStyle> magic = Arrays.asList(new CombatStyle[] {
         CombatStyle.Magic,
         CombatStyle.IceBurst,
         CombatStyle.IceBurstDefensive,
@@ -89,6 +99,20 @@ public enum CombatStyle {
         CombatStyle.ShadowBarrageDefensive,
     });
 
+    public static List<CombatStyle> getDefensiveMagic() {
+        return defensiveMagic;
+    }
+    private static List<CombatStyle> defensiveMagic = Arrays.asList(new CombatStyle[] {
+        CombatStyle.IceBurstDefensive,
+        CombatStyle.BloodBurstDefensive,
+        CombatStyle.SmokeBurstDefensive,
+        CombatStyle.ShadowBurstDefensive,
+        CombatStyle.IceBarrageDefensive,
+        CombatStyle.BloodBarrageDefensive,
+        CombatStyle.SmokeBarrageDefensive,
+        CombatStyle.ShadowBarrageDefensive
+    });
+
     public String getName() {
         return name;
     }
@@ -101,10 +125,23 @@ public enum CombatStyle {
 
     private final IconPaths iconPath;
 
+    public int getBaseXp() {
+        return baseXp;
+    }
+
+    private int baseXp = 0;
+
     // Constructor for the enum
     CombatStyle(String name, IconPaths iconPath) {
         this.name = name;
         this.iconPath = iconPath;
+        this.baseXp = 0;
+    }
+
+    CombatStyle(String name, IconPaths iconPath, int baseXp) {
+        this.name = name;
+        this.iconPath = iconPath;
+        this.baseXp = baseXp;
     }
 
     @Override
